Back-end/src/main/java/com/example/error/TaskDoneException.java
package com.example.error;

public class TaskDoneException extends RuntimeException {

    public TaskDoneException(String message) {
        super(message);
    }

}
